# Jackknife

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/evaluate/: confusion_matrices.h  dataset.cpp  dataset.h  evaluate.h  session.cpp.in  user_independent.cpp.in
cpp/evaluate/dirent/: README.md
cpp/jackknife/: filters.h  jackknife.h  jackknife_features.h  jackknife_recognizer.h  jackknife_template.h  jackknife_train.cpp  mathematics.h  sample.h  vector.h
csharp/: Jackknife.sln
csharp/Jackknife/: Distributions.cs  ExponentialMovingAverage.cs  Jackknife.csproj  JackknifeBlades.cs  JackknifeFeatures.cs  JackknifeRecognizer.cs  JackknifeTemplate.cs  Mathematics.cs  Program.cs  Sample.cs  Vector.cs
csharp/Jackknife/Evaluate/: CommandResult.cs  ConfusionMatrices.cs  Dataset.cs  Frame.cs  RecordingReader.cs  Session.cs  UserIndependent.cs
csharp/Jackknife/Properties/: AssemblyInfo.cs
datasets/jk2017/kinect/sessions/: U100  U101  U102  U103  U104  U105  U106  U107  U108  U109  U110  U111  U200  U202  U203  U204  U205  U206  U207
datasets/jk2017/leap_motion/sessions/: U300  U301  U302  U303  U304  U305  U306  U307  U401  U402  U403  U404  U500  U501  U502  U503  U504  U505  U506
datasets/jk2017/leap_motion/training/Sub_U300/explode/: ex_1.txt  ex_2.txt
js/: main.js  merged.js
js/evaluate/: confusion_matrices.js  dataset.js  evaluate.js  session.js
js/jackknife/: filters.js  jackknife.js  jackknife_features.js  jackknife_recognizer.js  jackknife_template.js  jackknife_train.js  mathematics.js  sample.js  vector.js
(+358 files in other folders)
